added Page model, migration and factory
	new file:   app/Models/Page/Events/CreatingPage.php
	new file:   app/Models/Page/Events/DeletingPage.php
	new file:   app/Models/Page/Events/PageCreated.php
	new file:   app/Models/Page/Events/PageDeleted.php
	new file:   app/Models/Page/Events/PageEvent.php
	new file:   app/Models/Page/Events/PageSaved.php
	new file:   app/Models/Page/Events/PageUpdated.php
	new file:   app/Models/Page/Events/SavingPage.php
	new file:   app/Models/Page/Events/UpdatingPage.php
	new file:   app/Models/Page/Page.php
	new file:   app/Models/Traits/GeneratesIds.php
	new file:   app/Models/Traits/HasDataColumn.php
	modified:   composer.json
	modified:   composer.lock
	new file:   database/factories/Page/PageFactory.php
	new file:   database/migrations/2023_10_29_123150_create_pages_table.php
	new file:   database/seeders/PageSeeder.php

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "pxlrbt/filament-excel": "^2.1",
         "saade/filament-adjacency-list": "^3.1",
         "saade/filament-fullcalendar": "^3.0",
-        "stancl/tenancy": "^3.7"
+        "stancl/tenancy": "^3.7",
+        "stancl/virtualcolumn": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
